2008-11-18  Josselin Mouette  <joss@malsain.org>

	Patch from Martin Pitt <martin.pitt@ubuntu.com>

	* esd-server.h:
	* esd.c: (reconnect_driver), (main): Install signal handler for 
        SIGUSR1 that reconnects to the ALSA driver. This is useful 
        after changing the ALSA configuration file.
	* clients.c: (esd_comm_loop): Integrate driver reconnection 
	into client loop.
	* audio_alsa09.c: Call snd_config_update_free_global() to purge
	configuration cache and to properly reload configuration 
	files.

2008-11-18  Josselin Mouette  <joss@malsain.org>

	Patch by Ryan Murray <rmurray@debian.org>

	* audio.c: (esd_audio_write), (esd_audio_flush),
	(esound_getblksize):
	* audio_oss.c: (esd_audio_open):
	* esd-server.h:
	* esd.c: (main):
	* esd.h:
	* proto.c: (esd_proto_get_latency):
        Rewrite generic esd_audio_write to attempt to use select if the 
        driver seems to support it, and to write in a blocksize that 
        can be changed by audio open functions.

2008-11-18  Josselin Mouette  <joss@malsain.org>

	* esound.pc.in: put audiofile in Requires.private to avoid 
        spuriously linking to it.

2008-11-18  Josselin Mouette  <joss@malsain.org>

	* docs/esdcat.1.in: Add standard pod2man header to avoid errors 
	from man.

2008-11-18  Josselin Mouette  <joss@malsain.org>

	* esddsp.c: (dsp_init): Protect dsp_init() with a mutex to 
	prevent race conditions from multiple calls (which hanged the 
	desktop session).

2008-11-18  Josselin Mouette  <joss@malsain.org>

	Patch from Martin Pitt <martin.pitt@ubuntu.com>

	* util.c: (esd_get_socket_dirname): support multiple esd 
	instances (one per user).

2008-11-18  Josselin Mouette  <joss@malsain.org>

	Patch from Martin Pitt <martin.pitt@ubuntu.com>

	* esdlib.c: Check if the esd binary exists at all. If not, 
	forego forking a shell and trying to execute it. This both 
	improves startup time and also avoids the "/bin/sh: 
	/usr/bin/esd: not found" warning.
